--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,28 +1,95 @@
 <header class="site-header">
-    <div class="container header-container">
-      <div class="logo">
-        <a href="/"
-          ><img
-            src="midiverselogo.png"
-            width="200px"
-            height="50%"
-            alt=""
-          /></a
-        >
-        <!-- Texto simple o logo img -->
-      </div>
-      <nav class="main-nav">
-        <ul>
-          <li><a href="/products">Products</a></li>
-          <li><a href="/services">Services</a></li>
-          <li><a href="/about">About</a></li> 
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
-      <div>
-        <a href="#products" class="cta-button header-cta">Explore Now</a>
-      </div>
-
-      <!-- Podrías añadir un botón de menú hamburguesa para móviles aquí -->
+  <div class="container header-container hidden md:flex">
+    <div class="logo">
+      <a href="/"
+        ><img src="/midiverselogo.png" width="200px" height="50%" alt="logo" /></a
+      >
     </div>
-  </header>
+    <nav class="main-nav">
+      <ul>
+        <li><a href="/products">Products</a></li>
+        <li><a href="/services">Services</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+    <div>
+      <a href="#products" class="cta-button header-cta">Explore Now</a>
+    </div>
+  </div>
+  <div class="md:hidden flex justify-between">
+    <div class="logo">
+      <a href="/"
+        ><img src="/midiverselogo.png" width="100px" height="50%" alt="logo" /></a
+      >
+    </div>
+    <nav class="main-nav hidden">
+      <ul>
+        <li><a href="/products">Products</a></li>
+        <li><a href="/services">Services</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+    <div class="p-2">
+      <button>
+        <svg
+        width="28px"
+        height="28px"
+        viewBox="0 0 200 200"
+        version="1.1"
+        id="svg5"  
+        xmlns="http://www.w3.org/2000/svg" >
+       
+       <defs
+          id="defs2" />
+       <g
+          
+          id="layer1">
+         <rect
+            style="font-variation-settings:'wght' 600;opacity:1;fill:#ffffff;fill-opacity:1;stroke:#000000;stroke-width:11.3651;stroke-dasharray:none;stroke-opacity:1"
+            id="rect254"
+            width="61.134857"
+            height="188.63486"
+            x="5.6825728"
+            y="5.6825795"
+             />
+         <rect
+            style="font-variation-settings:'wght' 600;fill:#ffffff;fill-opacity:0.995272;stroke:#000000;stroke-width:11.3651;stroke-dasharray:none;stroke-opacity:1"
+            id="rect254-8"
+            width="61.134853"
+            height="188.63486"
+            x="69.173599"
+            y="5.6825986"
+             />
+         <rect
+            style="font-variation-settings:'wght' 600;fill:#ffffff;fill-opacity:1;stroke:#000000;stroke-width:11.3651;stroke-dasharray:none;stroke-opacity:1"
+            id="rect254-5"
+            width="61.134853"
+            height="188.63486"
+            x="132.33269"
+            y="5.6825919"
+             />
+         <rect
+            style="font-variation-settings:'wght' 600;fill:#000000;fill-opacity:1;stroke:#000000;stroke-width:10.4802;stroke-dasharray:none;stroke-opacity:1"
+            id="rect1736-4"
+            width="34.519836"
+            height="105.81505"
+            x="115.22588"
+            y="5.2400808"
+             />
+         <rect
+            style="font-variation-settings:'wght' 600;opacity:1;fill:#000000;fill-opacity:1;stroke:#000000;stroke-width:10.4802;stroke-dasharray:none;stroke-opacity:1"
+            id="rect1736"
+            width="34.519836"
+            height="105.81505"
+            x="51.016697"
+            y="5.2400808"
+             />
+       </g>
+     </svg>
+     
+      </button>
+    </div> 
+  </div>
+</header>
