--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,23 +1,42 @@
 @import "tailwindcss";
 
 @theme {
-    --dark-bg: #1a1a1a; /* Fondo principal oscuro */
-    --dark-bg-secondary: #252525; /* Un gris oscuro ligeramente más claro */
-    --primary-accent: #adff2f; /* Verde lima vibrante */
-    --light-text: #f0f0f0; /* Texto principal claro */
-    --secondary-text: #a0a0a0; /* Texto secundario/grisáceo */
-    --border-color: #444; /* Bordes sutiles */
-  
-    --font-primary: "Poppins", sans-serif; /* Para títulos y elementos destacados */
-    --font-secondary: "Inter", sans-serif; /* Para cuerpo de texto */
-  
-    --container-width: 1140px;
-    --base-padding: 20px;
-    --section-padding: 60px 0; /* Espaciado vertical entre secciones */
-  }
-  
+  --dark-bg: #1a1a1a; /* Fondo principal oscuro */
+  --dark-bg-secondary: #252525; /* Un gris oscuro ligeramente más claro */
+  --primary-accent: #adff2f; /* Verde lima vibrante */
+  --light-text: #f0f0f0; /* Texto principal claro */
+  --secondary-text: #a0a0a0; /* Texto secundario/grisáceo */
+  --border-color: #444; /* Bordes sutiles */
+
+  --font-primary: "Poppins", sans-serif; /* Para títulos y elementos destacados */
+  --font-secondary: "Inter", sans-serif; /* Para cuerpo de texto */
+
+  --container-width: 1140px;
+  --base-padding: 20px;
+  --section-padding: 60px 0; /* Espaciado vertical entre secciones */
+}
+
 @layer components {
-   
+  video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.8; 
+  }
+
+  .overlay
+{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #3f4345;
+  mix-blend-mode: overlay;
+}
   .btn-primary {
     border-radius: calc(infinity * 1px);
     background-color: var(--color-violet-500);
@@ -34,10 +53,7 @@
   }
 }
 
-
-
 @layer base {
-    
   .cta-button {
     display: inline-block;
     padding: 10px 25px;
@@ -214,8 +230,6 @@
     color: var(--primary-accent);
   }
 
-   
-
   .learn-more-link {
     font-weight: 600;
     color: var(--primary-accent);
@@ -225,9 +239,15 @@
   .hero-section {
     padding: 100px 0;
     text-align: center;
+    z-index: 10;
+    position: relative;
+    @apply h-screen;
+  }
+
+  .v{
     /* Considera añadir una imagen/gradiente de fondo sutil aquí vía background-image */
     background: linear-gradient(rgba(26, 26, 26, 0.8), rgba(26, 26, 26, 1)),
-      url("path/to/optional-subtle-grid-bg.png"); /* Ejemplo */
+      url("/public/midiverselogo.png"); /* Ejemplo */
     background-size: cover;
     background-position: center;
   }
@@ -269,9 +289,7 @@
     padding: 30px;
     border-radius: 8px;
     border: 1px solid var(--border-color);
-    transition:
-      transform 0.3s ease,
-      box-shadow 0.3s ease;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
   }
 
   .product-card:hover {
