--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ import Footer from "../components/footer.astro";
     <link rel="icon" href="/favicon.ico" />
     <title>{siteData.title}</title>
     <Seo {siteData} frontmatter="website" />
-    <link rel="preload" href="/images/desktop.webp" as="image" />
+    <link rel="preload" href="/midiverselogo.png" as="image" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
