--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -232,8 +232,7 @@ import Layout from "../layouts/Layout.astro";
 
     <!-- Script para actualizar el año (opcional) -->
     <script>
-      document.getElementById("current-year").textContent =
-        new Date().getFullYear();
+      document.getElementById("current-year").textContent = new Date().getFullYear();
     </script>
     <!-- Aquí podrías enlazar archivos JavaScript para interactividad adicional -->
   </body>
